[metadata]
name = bmutils
version = 0.1.0
description = My personal bookmark converters for various browser history and add-on formats.
description-file = README.md
keywords = browser, bookmarks, Netscape
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.6

[options.extras_require]
twitter = tweepy >= 4.10.0; appdirs >= 1.4.4; cryptography >= 3.4.7

[options.entry_points]
console_scripts =
    bmutils = bmutils.__main__:main
